--- a/src/main/resources/templates/vv.html
+++ b/src/main/resources/templates/vv.html
@@ -13,13 +13,13 @@
             th:src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
 
     <link href="../static/css/guru.css"
-          th:href="@{css/guru.css}" rel="stylesheet" media="screen"/>
+          th:href="@{/css/guru.css}" rel="stylesheet" media="screen"/>
 </head>
 <body>
 <div class="container">
     <div class="jumbotron">
         <img src="../static/images/indexImg.jpg" width="1000"
-             th:src="@{images/indexImg.jpg}"/>
+             th:src="@{/images/indexImg.jpg}"/>
         <h1><3  ..!..  <3</h1>
 
         <h2><nav th:include="menu::menu"></nav></h2>
